      the write reply path.
    * BUG 4678,4697: Fix token creation for clear text logins.  


o   Jacob Berkman <jberkman@novell.com>
    * BUG 4566: Pass password data to krb5_prompter.


o   Guenther Deschner <gd@samba.org>
    * BUG 4657: Fix compilation and linking of pam_smbpass.so.
    * Add more netlogon GetDcName() client calls.


o   Steve Langasek <vorlon@debian.org>
    * Allow SIGTERM to cause nmbd to exit on awaiting an interface 
      to come up.


o   Volker Lendecke <vl@samba.org>
    * Fix record state check error when reviewing entries in nmbd's
      WINS database.


o   Justin Maggard <jmaggard@infrant.com>
    * Don't expire a password if it's explicitly set as ACB_PWNOTREQ.


o   <mnix@wanm.com.au>
    * Fix old old bug in cli_smbwrite() (not incrementing data 
      being sent).


o   Jens Nissen <jens.nissen@gmx.net>
    * BUG 4537: Fix smbtorture deny test2.


o   James Peach <jpeach@apple.com>
    * Fix structure types in the vfs_catia NT_ACL operations.


o   Doug Rudoff <doug_rudoff@isilon.com>
    * Ensure that the the lck struct for invalid locks are correctly
      saved and therefore cleaned up.


o   Simo Sorce <idra@samba.org>
    * Updates for the packaging/Debian directory.
    * Add missing 'c' character to the list of shell safe characters.
    * BUG 4667 (partial): Fix crash bug in idmap_ldap.c.
    * Fix inconsistencies between creating machine and user accounts.
    * Fix bug deleting LDAP user accounts that used the account 
      objectclass as its structural basis.
    * BUG 2319: Ensure that smbspool correctly decodes %-encoded
      characters.
    * BUG 4624: Fix crashes in idmap_rid.


Release notes for older releases follow:

      --------------------------------------------------
                   ===============================
                   Release Notes for Samba 3.0.25a
                             May 25, 2007
                   ===============================
